@@ -5,10 +5,53 @@
 #include "bcf.h"
 #include "kstring.h"
 #include "kseq.h"
-KSTREAM_INIT(gzFile, gzread, 4096)
+
+typedef struct{
+	union {
+		BGZF *bgzf;	  /* 'b'inary block-compresed, including remote */
+		gzFile gz;	  /* local gz or uncompressed */
+	} fp;
+	int is_bgzf;
+} vcffile_t;
+
+typedef vcffile_t *vcfFile;
+
+vcfFile _vcf_open(const char *fn, const char *__restrict mode)
+{
+	vcfFile vcf = (vcfFile) malloc(sizeof(vcffile_t));
+	vcf->is_bgzf = bgzf_check_bgzf(fn);
+
+	if (vcf->is_bgzf)
+		vcf->fp.bgzf = bgzf_open(fn, mode);
+	else
+		vcf->fp.gz = gzopen(fn, mode);
+
+	return vcf;
+}
+
+int _vcf_read(vcfFile vcf, void *data, int length)
+{
+	int res;
+	if (vcf->is_bgzf)
+		res = bgzf_read(vcf->fp.bgzf, data, length);
+	else
+		res = gzread(vcf->fp.gz, data, length);
+	return res;
+}
+
+int _vcf_close(vcfFile vcf)
+{
+	int res;
+	if (vcf->is_bgzf)
+		res = bgzf_close(vcf->fp.bgzf);
+	else
+		res = gzclose(vcf->fp.gz);
+	return res;
+}
+KSTREAM_INIT(vcfFile, _vcf_read, 4096)
 
 typedef struct {
-	gzFile fp;
+ 	vcfFile fp;
 	FILE *fpout;
 	kstream_t *ks;
 	void *refhash;
@@ -65,7 +108,7 @@ bcf_t *vcf_open(const char *fn, const char *mode)
 	bp->v = v;
 	v->refhash = bcf_str2id_init();
 	if (strchr(mode, 'r')) {
-		v->fp = strcmp(fn, "-")? gzopen(fn, "r") : gzdopen(fileno(stdin), "r");
+		v->fp = _vcf_open(fn, "r");
 		v->ks = ks_init(v->fp);
 	} else if (strchr(mode, 'w'))
 		v->fpout = strcmp(fn, "-")? fopen(fn, "w") : stdout;
@@ -75,7 +118,7 @@ bcf_t *vcf_open(const char *fn, const char *mode)
 int vcf_dictread(bcf_t *bp, bcf_hdr_t *h, const char *fn)
 {
 	vcf_t *v;
-	gzFile fp;
+	vcfFile fp;
 	kstream_t *ks;
 	kstring_t s, rn;
 	int dret;
@@ -84,7 +127,7 @@ int vcf_dictread(bcf_t *bp, bcf_hdr_t *h, const char *fn)
 	s.l = s.m = 0; s.s = 0;
 	rn.m = rn.l = h->l_nm; rn.s = h->name;
 	v = (vcf_t*)bp->v;
-	fp = gzopen(fn, "r");
+	fp = _vcf_open(fn, "r");
 	ks = ks_init(fp);
 	while (ks_getuntil(ks, 0, &s, &dret) >= 0) {
 		bcf_str2id_add(v->refhash, strdup(s.s));
@@ -92,7 +135,7 @@ int vcf_dictread(bcf_t *bp, bcf_hdr_t *h, const char *fn)
 		if (dret != '\n') ks_getuntil(ks, '\n', &s, &dret);
 	}
 	ks_destroy(ks);
-	gzclose(fp);
+	_vcf_close(fp);
 	h->l_nm = rn.l; h->name = rn.s;
 	bcf_hdr_sync(h);
 	free(s.s);
@@ -107,7 +150,7 @@ int vcf_close(bcf_t *bp)
 	v = (vcf_t*)bp->v;
 	if (v->fp) {
 		ks_destroy(v->ks);
-		gzclose(v->fp);
+		_vcf_close(v->fp);
 	}
 	if (v->fpout) fclose(v->fpout);
 	free(v->line.s);
