@@ -14,6 +14,8 @@ BUG FIXES
 
     o bamReverseComplement<- failed to return the updated object
 
+    o scanBcfHeader works on remote files
+
 CHANGES IN VERSION 1.8.0
 ------------------------
 
